{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 66,
  "lineage": "d868c6d4-e753-2a0d-fc21-df1f2d883fe6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_bastion_firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-25T06:09:56.043-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-bastion-in",
            "name": "allow-bastion-in",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "priority": 1,
            "project": "temp-project-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/firewalls/allow-bastion-in",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "server"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-25T06:09:56.003-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "devops-allow-http",
            "name": "devops-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "priority": 1000,
            "project": "temp-project-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/firewalls/devops-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-25T06:09:56.206-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "devops-allow-https",
            "name": "devops-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "priority": 1000,
            "project": "temp-project-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/firewalls/devops-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_into_bastion_firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-25T06:09:56.540-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-into-bastion",
            "name": "allow-into-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "priority": 1,
            "project": "temp-project-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/firewalls/allow-into-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_into_jenkins",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-25T06:09:56.062-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-into-jenkins-server",
            "name": "allow-into-jenkins-server",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "priority": 500,
            "project": "temp-project-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/firewalls/allow-into-jenkins-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_into_servers_firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2019-09-25T06:09:56.005-07:00",
            "deny": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "deny-into-servers",
            "name": "deny-into-servers",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "priority": 2000,
            "project": "temp-project-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/firewalls/deny-into-servers",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "server"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "devops_bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/temp-project-0/zones/us-central1-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "bastion",
            "instance_id": "7632456980852300207",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "BTYU1M-o7ew=",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.101.74",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
                "network_ip": "192.168.2.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/temp-project-0/regions/us-central1/subnetworks/uat-subnet",
                "subnetwork_project": "temp-project-0"
              }
            ],
            "project": "temp-project-0",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/zones/us-central1-a/instances/bastion",
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "google_compute_subnetwork.uat_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins_vm",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/temp-project-0/zones/us-central1-a/disks/jenkins-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "jenkins-server",
            "instance_id": "1195071993727252933",
            "label_fingerprint": "BytbEPUG4HY=",
            "labels": {
              "environment": "uat"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "zqZfTHoOF7I=",
            "metadata_startup_script": "#!/bin/sh\necho UPDATE OS\nsudo yum -y update\n\necho INSTALL GIT\nsudo yum -y install git\n\necho INSTALL JAVA AND DEVELOPER ENVIRONMENT\nsudo yum -y install java-1.8.0-openjdk\nsudo yum -y install java-1.8.0-openjdk-devel\n\necho INSTALL MAVEN  \nsudo yum -y install maven\n\necho INSTALL NODEJS\ncurl -sL https://rpm.nodesource.com/setup_10.x | sudo bash -\nsudo yum -y install nodejs\n\necho INSTALL ANGULAR\nsudo npm -y install -g @angular/cli\n\necho INS [...]
            "name": "jenkins-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.201.150",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
                "network_ip": "192.168.2.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/temp-project-0/regions/us-central1/subnetworks/uat-subnet",
                "subnetwork_project": "temp-project-0"
              }
            ],
            "project": "temp-project-0",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/zones/us-central1-a/instances/jenkins-server",
            "service_account": [
              {
                "email": "jenkins-service-account@temp-project-0.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "jenkins",
              "server"
            ],
            "tags_fingerprint": "WX-_R91C4AI=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "data.template_file.jenkins_startup_script",
            "google_compute_subnetwork.uat_subnetwork",
            "google_service_account.jenkins_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "uat_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "devops-network",
            "name": "devops-network",
            "project": "temp-project-0",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "pipeline_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-09-25T06:09:56.382-07:00",
            "enable_flow_logs": false,
            "fingerprint": "8ceBF-8NZxA=",
            "gateway_address": "192.168.1.1",
            "id": "us-central1/devops-subnet",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "devops-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "private_ip_google_access": false,
            "project": "temp-project-0",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/regions/us-central1/subnetworks/devops-subnet"
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "uat_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-09-25T06:09:56.697-07:00",
            "enable_flow_logs": false,
            "fingerprint": "K2kPczp6e_Y=",
            "gateway_address": "192.168.2.1",
            "id": "us-central1/uat-subnet",
            "ip_cidr_range": "192.168.2.0/24",
            "name": "uat-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-0/global/networks/devops-network",
            "private_ip_google_access": false,
            "project": "temp-project-0",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-0/regions/us-central1/subnetworks/uat-subnet"
          },
          "depends_on": [
            "google_compute_network.uat_network"
          ]
        }
      ]
    }
  ]
}